# tiny-tg

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tiny_tg/: __init__.py  cli.py  telegram.py  utils.py
